--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,6 @@ server:
 spring:
   datasource:
     username: root
-    password: !QAZ2wsx
+    password: '!QAZ2wsx'
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/zhuge?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://49.235.85.106:3304/zhuge?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
